
  make sure this replacement stays on upstream merge

- app/javascript/src/ugent/plans/new.js

  replacement for app/javascript/src/plans/new.js

  inserted into app/javascript/packs/application.js (see above)

  expected by override template app/views/branded/plans/new.html.erb (see below):
    expects #plan_org_id and #plan_funder_id to be select boxes,
    instead of autocomplete inputs!

- app/views/branded/plans/new.html.erb

  overrides app/views/plans/new.html.erb

  makes sure that research org id and funder id taken
  from a preselected list, and are presented in a select box

  IMPORTANT: both TemplateOptionsController#index and
             PlansController#create use an org selector
             that expects a hash with "id", "name" ..
             instead of just an id. Providing just "id"
             returns an empty match, because it does not
             match on "name" also (weird);

             that is why the values of select boxes
             plan[org][id] and plan[funder][id] contain
             JSON values!

- app/views/branded/shared/export/_plan.erb

  overrides app/views/shared/export/_plan.erb

  uses @selected_phases instead of @selected_phase
  as determined by overridden controller PlanExportsController.

  See config/initializer/ugent.rb

- app/views/branded/plans/_download_form.html.erb

  overrides app/views/plans/_download_form.html.erb

  in contrast to original, lets us select from multiple phases,
  disables download button when no phase is selected.

  expects array @selected_phases instead of original @selected_phase
  to be present

- app/views/branded/paginable/plans/_privately_visible.html.erb

  overrides app/views/paginable/plans/_privately_visible.html.erb

  adds column "owner", makes use of new method PlansHelper#display_user

- app/views/branded/org_admin/questions/_show.html.erb

  overrides app/views/org_admin/questions/_show.html.erb

  preliminary fix for PR https://github.com/DMPRoadmap/roadmap/pull/3173
