@@ -49,6 +49,12 @@
     expects #plan_org_id and #plan_funder_id to be select boxes,
     instead of autocomplete inputs!
 
+- app/policies/api/v1/plans_policy.rb
+
+  preliminary fix as done by https://github.com/DMPRoadmap/roadmap/pull/3209
+
+  so should merge pulling down upstream branch
+
 - app/views/branded/plans/new.html.erb
 
   overrides app/views/plans/new.html.erb
